[gd_scene load_steps=7 format=3 uid="uid://c0xd22gf1k06x"]

[ext_resource type="PackedScene" uid="uid://blbyfhvh0tsg5" path="res://scenes/enemies/enemy.tscn" id="1_pk63w"]
[ext_resource type="Script" uid="uid://uylbxnrunskd" path="res://scenes/enemies/robot.gd" id="2_4nyjy"]
[ext_resource type="Texture2D" uid="uid://crclekvmjolef" path="res://sprites/robot.png" id="3_bkbbb"]
[ext_resource type="AudioStream" uid="uid://c3oyxjlty5uvq" path="res://sounds/robot_turn_around.wav" id="4_4nyjy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_27abd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bkbbb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0r03"]
size = Vector2(11, 12)

[node name="Robot" instance=ExtResource("1_pk63w")]
script = ExtResource("2_4nyjy")
death_particles_color = Color(0.705882, 0.705882, 0.705882, 1)

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_27abd")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_x0r03")

[node name="DownRayCast" type="RayCast2D" parent="." index="2"]
target_position = Vector2(12, 12)
collision_mask = 5

[node name="ForwardRayCast" type="RayCast2D" parent="." index="3"]
target_position = Vector2(9.5, 0)
collision_mask = 5

[node name="TurnAroundSound" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("4_4nyjy")
volume_db = 8.0

[node name="TurnAroundTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[node name="TurnedAroundTimer" type="Timer" parent="." index="6"]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="TurnAroundTimer" to="." method="_on_turn_around_timer_timeout"]
